# zarrs-python

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  Cargo.toml  LICENSE  README.md  build.rs  hatch.toml  index.html  pyproject.toml
.github/workflows/: CI.yml  cd.yml  ci.yml  publish.yml  release.yml  version-cmp.py
docs/: api.md  conf.py  contributing.md  index.md
examples/: .gitignore  issue_152.py  simple.py
python/zarrs/: __init__.py  _internal.pyi  array.py  pipeline.py  utils.py
python/zarrs_python/: __init__.py  pipeline.py  utils.py
src/: array.rs  chunk_item.rs  codec_pipeline_store_filesystem.rs  codec_pipeline_store_http.rs  concurrency.rs  lib.rs  map_py_err.rs  metadata_v2.rs  runtime.rs  store.rs  tests.rs  utils.rs
src/store/: filesystem.rs  http.rs  manager.rs  obstore.rs  zip.rs
tests/: conftest.py  test_array.py  test_blosc.py  test_codecs.py  test_endian.py  test_gzip.py  test_obstore.py  test_pipeline.py  test_registry.py  test_sharding.py  test_strict_mode.py  test_transpose.py  test_v2.py  test_version.py  test_vlen.py  test_zarrs_http.py  test_zstd.py
tests/data/: check-registry.py
tests/pipeline/: conftest.py  test_pipeline.py  test_roundtrip.py
