[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "zarrs-python"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = [
    'asciitree',
    'numpy>=1.24',
    'fasteners',
    'numcodecs[msgpack]>=0.10.0',
    'fsspec>2024',
    'crc32c',
    'zstandard',
    'typing_extensions',
    'donfig',
    'pytest',
    'universal_pathlib>=0.2.0'
]

[project.optional-dependencies]
test = [
    "coverage",
    "pytest",
    "pytest-cov",
    "msgpack",
    "lmdb",
    "s3fs",
    "pytest-asyncio",
    "moto[s3]",
    "flask-cors",
    "flask",
    "requests",
    "mypy",
    "hypothesis"
]
dev = ["maturin"]

[tool.maturin]
module-name = "zarrs_python.zarrs_python_internal"
features = ["pyo3/extension-module"]


[tool.pytest.ini_options]
minversion = "7"
testpaths = ["tests"]
log_cli_level = "INFO"
xfail_strict = true
asyncio_mode = "auto"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
    "IGNORE_EXCEPTION_DETAIL",
]
addopts = [
    "--durations=10", "-ra", "--strict-config", "--strict-markers",
]
filterwarnings = [
    "error:::zarr.*",
    "ignore:PY_SSIZE_T_CLEAN will be required.*:DeprecationWarning",
    "ignore:The loop argument is deprecated since Python 3.8.*:DeprecationWarning",
]